# Mohe

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  设计开发文档.md  软件设计说明书_SDD.md
.claude/: settings.local.json
images/: 视觉风格规范.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs
src/components/: CodeMirrorEditor.tsx  DocumentList.tsx  Editor.tsx  RightPanel.tsx  SettingsPage.tsx  Sidebar.tsx  TitleBar.tsx
src/services/: agent.ts  ai.ts  api.ts  builtinTools.ts  chunker.ts  embedding.ts  initTools.ts  memoryService.ts  rag.ts  toolExecutor.ts  toolParser.ts  toolRegistry.ts  vectorStore.ts  workspace.ts
src/stores/: appStore.ts  chatStore.ts  editorStore.ts  memoryStore.ts  settingsStore.ts  workspaceStore.ts
src/types/: index.ts
